Correzioni su eliminazione della chat, si Delete che Delete And Stop. Tutto funziona. Forse.